MODUSERS-536: Fix sonarcloud issues